--- a/src/components/Signup.scss
+++ b/src/components/Signup.scss
@@ -3,54 +3,62 @@
 
 .signup-container {
   margin: 25px auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  place-items: center;
 
   h1 {
     text-transform: uppercase;
-    font-size: 2.25em;
+    font-size: 3.2em;
     letter-spacing: 0.002rem;
     margin: 0;
     // color: #dc0d0d;
   }
 
   h2 {
-    font-size: 1.75em;
+    font-size: 2.5em;
     margin: 0;
-    // color: #dc0d0d;
   }
 }
 
 .signup-form {
   display: flex;
+  margin: 30px 0 0 0;
   flex-direction: column;
+  row-gap: 10px;
   align-items: center;
-  width: 450px;
-  margin: 20px auto;
+  width: 475px;
   padding: 20px;
   background-color: #f9f9f9;
   border: 1px solid $input-border;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
+  .account-login {
+    text-decoration: none;
+    font-size: 1.5em;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
   .input-group {
     display: flex;
     justify-content: space-between;
+    column-gap: 10px;
     align-items: flex-end;
     width: 100%;
   }
 
   label {
-    font-size: 0.8em;
+    font-size: 1.2em;
     margin-left: 8px;
   }
 
   input {
     padding: 10px;
-    margin: 5px 5px;
-    height: 20px;
+    height: 2.5em;
+    width: 100%;
     font-size: 16px;
     border: 1px solid $input-border;
     border-radius: 5px;
@@ -63,6 +71,12 @@
   .title {
     display: flex;
     justify-content: center;
+
+    h3 {
+      font-family: "Comfortaa";
+      font-size: 2em;
+      margin: 20px 0 30px 0;
+    }
   }
 
   .password-group {
@@ -81,6 +95,7 @@
   }
 
   button {
+    margin-top: 1.5em;
     min-width: 60%;
     padding: 10px;
     font-size: 18px;
@@ -96,7 +111,7 @@
     }
   }
 
-  //   .birthday {
-  //     min-width: 40%;
-  //   }
+  .birthday {
+    min-width: 40%;
+  }
 }
