--- a/src/components/Appointment.scss
+++ b/src/components/Appointment.scss
@@ -1,5 +1,39 @@
+@import "../styles/variables/";
+@import "../styles/mixins";
+
 .appointment-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  column-gap: 2em;
+  row-gap: 2em;
+
+  border: 0.1rem solid $input-border;
   // flex-direction: column;
+
+  .schedule-form {
+    display: flex;
+    flex-direction: column;
+    min-width: 350px;
+
+    .requirements {
+      min-height: 100px;
+    }
+
+    select {
+      padding: 0.2em;
+      height: 2.5em;
+      font-size: 1.5em;
+      width: 100%;
+      border-radius: 10px;
+    }
+
+    #time {
+      font-family: "Comfortaa", "Roboto", sans-serif;
+
+      option {
+        font-family: "Comfortaa", "Roboto", sans-serif;
+      }
+    }
+  }
 }
