--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -14,6 +14,7 @@ nav {
   height: 100vh;
   row-gap: 2em;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.05);
+  box-sizing: border-box;
 
   h2 {
     font-family: "Comfortaa", "Roboto", sans-serif;
