create helper functions

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,6 @@
 $primary-color: #3498db;
 $secondary-color: #2ecc71;
+$tertiary-color: #ffc107;
 $disabled-color: #b3b3b3;
 $font-stack: "Roboto", "Comfortaa" sans-serif;
 $input-border: #ccc;
