--- a/src/components/AppointmentDetails.scss
+++ b/src/components/AppointmentDetails.scss
@@ -6,9 +6,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
+  height: 50%;
   width: 700px;
   margin-top: 2em;
+  row-gap: 1em;
 
   .appointment-status {
     h1 {
@@ -30,32 +31,59 @@
   .appointment-information {
     display: flex;
     flex-direction: column;
-    width: 500px;
-    row-gap: 3em;
-    padding: 2em 0;
-
+    justify-content: center;
+    width: 400px;
+    hr {
+      margin: 1em;
+    }
     .requirements {
-      align-self: center;
+      display: flex;
+      justify-content: space-between;
+
+      h2 {
+        width: 100px;
+        text-align: right;
+        color: #868686;
+        font-size: 1.5em;
+        font-weight: 400;
+      }
+      span {
+        font-size: 1.5em;
+        color: #868686;
+      }
+
       ul {
-        margin-left: 1.5em;
         li {
+          list-style: none;
+          width: 150px;
+          text-align: left;
           font-size: 1.5em;
         }
       }
     }
-
-    .row {
+    ul {
       display: flex;
-      justify-content: space-between;
-      row-gap: 2em;
+      flex-direction: column;
+      row-gap: 1em;
 
       .info-group {
         display: flex;
-        flex-direction: column;
-        text-align: left;
-        width: 150px;
+        justify-content: space-between;
+        h2 {
+          width: 100px;
+          text-align: right;
+          color: #868686;
+          font-size: 1.5em;
+          font-weight: 400;
+        }
 
+        span {
+          font-size: 1.5em;
+          color: #868686;
+        }
         p {
+          width: 150px;
+          text-align: left;
           font-size: 1.5em;
         }
       }
