--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -32,6 +32,7 @@ nav {
       text-indent: 3em;
       display: flex;
       align-items: center;
+      cursor: pointer;
 
       &:hover {
         background-color: #eaeaea;
