--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,8 @@
-$primary-color: #3498db;
-$secondary-color: #2ecc71;
+$primary-color: #dc3545;
+$secondary-color: #0d6efd;
 $tertiary-color: #ffc107;
 $disabled-color: #b3b3b3;
+$ligh-color: #f8f9fa;
 $font-stack: "Roboto", "Comfortaa" sans-serif;
 $input-border: #ccc;
 $font-color: #3c3c3c;
