--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,9 @@
 $primary-color: #dc3545;
 $secondary-color: #0d6efd;
+$success-color: #198754;
 $tertiary-color: #ffc107;
 $disabled-color: #b3b3b3;
-$ligh-color: #f8f9fa;
+$light-color: #f8f9fa;
 $font-stack: "Roboto", "Comfortaa" sans-serif;
 $input-border: #ccc;
 $font-color: #3c3c3c;
