--- a/src/components/Dashboard.scss
+++ b/src/components/Dashboard.scss
@@ -8,6 +8,28 @@
   height: 100vh;
   padding: 0 3em;
 
+  .appointment-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    label {
+      display: flex;
+      align-items: center;
+      font-size: 1.5em;
+      column-gap: 0.5em;
+      i {
+        cursor: pointer;
+        font-size: 1.5em;
+      }
+      input {
+        font-family: "Comfortaa", "Roboto", sans-serif;
+        width: 140px;
+        padding: 0.3em 0.2em;
+      }
+    }
+  }
+
   hr {
     border: 0.1em solid $input-border;
     width: 100%;
