--- a/src/components/Login.scss
+++ b/src/components/Login.scss
@@ -1,14 +1,34 @@
 @import "../styles/variables/";
 @import "../styles/mixins";
 
+.bg-wrapper {
+  background-image: url("../assets/images/PhFlag.jpg");
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+
+  .message {
+    align-self: flex-end;
+    text-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+    h2 {
+      font-size: 2.75em;
+      color: $light-color;
+    }
+    h3 {
+      font-size: 2em;
+      color: $tertiary-color;
+    }
+  }
+}
+
 .login-container {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   margin: 100px 150px 0 125px;
   font-family: $font-stack;
   background-image: url("../assets/images/putatanLogo.png");
   background-repeat: no-repeat;
-  background-size: 500px;
+  background-size: 400px;
 
   .title {
     margin: 10px auto;
@@ -26,7 +46,7 @@
   }
 
   h2 {
-    font-size: 2.38em;
+    font-size: 2.05em;
     margin: 0;
     // color: #dc0d0d;
   }
