Added cursor pointer for link

--- a/src/components/AppointmentDetails.scss
+++ b/src/components/AppointmentDetails.scss
@@ -194,6 +194,7 @@
           color: $secondary-color;
           &:hover {
             text-decoration: underline;
+            cursor: pointer;
           }
         }
 
