--- a/src/components/Login.scss
+++ b/src/components/Login.scss
@@ -100,6 +100,7 @@
   background-image: url("../assets/images/putatanLogo.png");
   background-repeat: no-repeat;
   background-size: 400px;
+  column-gap: 2em;
 
   .title {
     margin: 10px auto;
