--- a/src/components/AppointmentDetails.scss
+++ b/src/components/AppointmentDetails.scss
@@ -13,10 +13,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 50%;
+  height: 75%;
   width: 700px;
   margin-top: 2em;
   row-gap: 1em;
+  overflow-y: auto;
+  overflow-x: hidden;
+
+  &::-webkit-scrollbar {
+    width: 8px; // Width of the scrollbar
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.3); // Scroll thumb color
+    border-radius: 4px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent; // Track background
+  }
 
   .status-history {
     display: flex;
