remove refresh token

--- a/src/components/AppointmentDetails.scss
+++ b/src/components/AppointmentDetails.scss
@@ -95,7 +95,7 @@
         }
         .tooltip {
           position: absolute;
-          bottom: 125%;
+          bottom: -125%;
           left: 50%;
           transform: translateX(-50%);
           padding: 8px 12px;
@@ -106,15 +106,16 @@
           opacity: 0;
           transition: opacity 0.3s ease visibility 0.3s ease;
 
-          &::after {
-            content: "";
-            position: absolute;
-            top: 100%;
-            left: 50%;
-            transform: translateX(-50%);
-            border-width: 5px;
-            border-style: solid;
-          }
+          // &::after {
+          //   content: "";
+          //   position: absolute;
+          //   top: -8px; // Place arrow above the tooltip
+          //   left: 50%;
+          //   transform: translateX(-50%);
+          //   border-width: 8px;
+          //   border-style: solid;
+          //   border-color: transparent transparent #333 transparent; // Creates an upward-pointing arrow
+          // }
         }
         &:hover .tooltip {
           visibility: visible;
